v5
  # Course section 6: Logger
    + Added a Logger class for logging with Log() and Err() functions
    (section completed)

v4
  # Course section 5: Fixing the Game Time Step
    + Added player position and velocity vectors
    + Implemented fixed time step in the Update() function by using a while 
      loop to cap the framerate
    + Improved the fixed time step by replacing the while loop with the built
      in SDL function SDL_Delay()
    + Added variable delta-time and implemented position updates based on 
      delta-time factor
    (section completed)
v3
  # Course section 4: Rendering SDL Objects
    + Added drawing of a test rectangle using the built-in SDL function
    + Added test rendering of a png image
    (section completed)

v2
  # Course section 3: Displaying the Game Window
    + Created Game.h/Game.cpp with the Game class
    + Added SDL initialization and window/renderer setup in the Initialize() function
      in the Game class.
    + Added cleanup in Game::Destroy()
    + Added event pulling in Game::ProcessInput()
    + Added rendering of a solid red screen in Game:Render()
    + Changed the window size to borderless fullscreen
    + Changed the video mode to fullscreen ("true" fullscreen)
    (section completed)

v1
  # Course section 1: Introduction
    (section completed)
    
  # Course section 2: Libraries & Dependencies
    + Initial set up of folder structure, assets, libraries, Makefile
    (section completed)